--- a/catalog.html
+++ b/catalog.html
@@ -66,7 +66,7 @@
   <main class="main-content">
     <div class="container">
       <ul class="breadcrumbs">
-        <li class="breadcrumbs__item"><a href="index.html" class="breadcrumbs__link breadcrumbs__trail" aria-label="Главная"></a></li>
+        <li class="breadcrumbs__item"><a href="index.html" class="breadcrumbs__link breadcrumbs__trail breadcrumbs__link_mr" aria-label="Главная"></a></li>
         <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link breadcrumbs__trail">Каталог</a></li>
         <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link breadcrumbs__trail">Инструмент</a></li>
         <li class="breadcrumbs__item"><a class="breadcrumbs__link">Перфораторы</a></li>
