--- a/catalog.html
+++ b/catalog.html
@@ -28,7 +28,7 @@
     </div>
     <div class="substrate">
       <div class="container container_flex">
-        <h1 class="description">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+        <h1 class="description">Интернет-магазин строительных материалов &nbsp; и инструментов для ремонта</h1>
         <section class="contacts">
           <h2 class="visually-hidden">Контактные данные</h2>
           <p class="contacts__phone">+7 (812) 555-05-55</p>
@@ -84,8 +84,8 @@
               <div class="price-slider">
                 <div class="price-slider__line">
                   <div class="price-slider__line-fill"></div>
-                  <div class="price-slider__control price-slider__control-min" tabindex="0"></div>
-                  <div class="price-slider__control price-slider__control-max" tabindex="0"></div>
+                  <div class="price-slider__control price-slider__control-min" tabindex="0" aria-label="Стоимость от"></div>
+                  <div class="price-slider__control price-slider__control-max" tabindex="0" aria-label="Стоимость до"></div>
                 </div>
               </div>
               <div class="filters-product__price-item">
@@ -96,27 +96,26 @@
             <hr class="separator">
             <fieldset class="filters-product__group">
               <legend class="filters-product__group-title">Производители:</legend>
-              <input class="filters-product__choice" id="bosch" type="checkbox" name="manufacturers" value="Bosch"
-                checked>
+              <input class="filters-product__choice visually-hidden" id="bosch" type="checkbox" name="manufacturers" value="Bosch" checked>
               <label class="filters-product__manufacturers" for="bosch">Bosch</label>
-              <input class="filters-product__choice" id="interskol" type="checkbox" name="manufacturers" value="Интерскол">
+              <input class="filters-product__choice visually-hidden" id="interskol" type="checkbox" name="manufacturers" value="Интерскол">
               <label class="filters-product__manufacturers" for="interskol">Интерскол</label>
-              <input class="filters-product__choice" id="makita" type="checkbox" name="manufacturers" value="Makita"
+              <input class="filters-product__choice visually-hidden" id="makita" type="checkbox" name="manufacturers" value="Makita"
                 checked>
               <label class="filters-product__manufacturers" for="makita">Makita</label>
-              <input class="filters-product__choice" id="dewalt" type="checkbox" name="manufacturers" value="Dewalt" disabled>
+              <input class="filters-product__choice visually-hidden" id="dewalt" type="checkbox" name="manufacturers" value="Dewalt" disabled>
               <label class="filters-product__manufacturers" for="dewalt">Dewalt</label>
-              <input class="filters-product__choice" id="hitachi" type="checkbox" name="manufacturers" value="Hitachi">
+              <input class="filters-product__choice visually-hidden" id="hitachi" type="checkbox" name="manufacturers" value="Hitachi">
               <label class="filters-product__manufacturers" for="hitachi">Hitachi</label>
             </fieldset>
             <hr class="separator">
             <fieldset class="filters-product__group">
               <legend class="filters-product__group-title">Питание:</legend>
-              <input class="filters-product__choice" type="radio" name="power" id="rechargeable" value="rechargeable"
+              <input class="filters-product__choice visually-hidden" type="radio" name="power" id="rechargeable" value="rechargeable"
                 checked>
-              <label class="filters-product__type" for="rechargeable">Аккумуляторные</label>
-              <input class="filters-product__choice" type="radio" name="power" id="mains" value="mains">
-              <label class="filters-product__type" for="mains">Сетевые</label>
+              <label class="filters-product__type" for="rechargeable" tabindex="0">Аккумуляторные</label>
+              <input class="filters-product__choice visually-hidden" type="radio" name="power" id="mains" value="mains">
+              <label class="filters-product__type" for="mains" tabindex="0">Сетевые</label>
             </fieldset>
             <button class="filters-product__show">Показать</button>
           </form>
@@ -288,7 +287,7 @@
       <div class="footer__top container">
         <div class="footer__top_left">
           <a href="index.html" class="footer__top-logo-link"><img src="img/logo-header.png" width="138" height="23" alt="Техномарт"></a>
-          <p class="footer__top-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> +7 (812) 555-05-55</p>
+          <p class="footer__top-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</p>
         </div>
         <div class="footer__top_right">
           <ul class="footer__top-navigation">
@@ -312,7 +311,7 @@
     </div>
     <div class="footer-wrapper-bottom">
       <div class="footer__bottom container">
-        <p class="footer__bottom-copyright">© 2010–2019 Компания «Техномарт» <br> Все права защищены</p>
+        <p class="footer__bottom-copyright">© 2010–2019 Компания «Техномарт» Все права защищены</p>
         <ul class="footer__bottom-social">
           <li class="footer__bottom-social-item"><a href="#" class="footer__bottom-social-link footer__bottom-social-vk"
               aria-label="Техномарт в ВКонтакте"></a></li>
@@ -321,8 +320,8 @@
           <li class="footer__bottom-social-item"><a href="#" class="footer__bottom-social-link footer__bottom-social-inst"
               aria-label="Техномарт в Instagram"></a></li>
         </ul>
-        <p class="footer__bottom-communication">Обратная связь: <br> <a href="#" class="footer__bottom-communication-link">mail@htmlacademy.ru</a></p>
-        <p class="footer__bottom-developed">Разработано: <br> <a href="https://htmlacademy.ru/intensive/htmlcss" class="footer__bottom-developed-link">htmlacademy.ru</a></p>
+        <p class="footer__bottom-communication">Обратная связь: <a href="#" class="footer__bottom-communication-link">mail@htmlacademy.ru</a></p>
+        <p class="footer__bottom-developed">Разработано: <a href="https://htmlacademy.ru/intensive/htmlcss" class="footer__bottom-developed-link">htmlacademy.ru</a></p>
       </div>
     </div>
   </footer>
