--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="substrate">
       <div class="container container_flex">
-        <h1 class="description">Интернет-магазин строительных материалов <br> и инструментов для ремонта</h1>
+        <h1 class="description">Интернет-магазин строительных материалов &nbsp; и инструментов для ремонта</h1>
         <section class="contacts">
           <h2 class="visually-hidden">Контактные данные</h2>
           <p class="contacts__phone">+7 (812) 555-05-55</p>
@@ -182,25 +182,25 @@
           <img class="manufacturers__img" src="img/bosch.jpg" width="126" height="37" alt="Bosch">
         </a>
         <a href="#" class="manufacturers__link">
-          <img class="manufacturers__img" src="img/Makita.jpg" width="123" height="40" alt="Makita">
+          <img class="manufacturers__img" src="img/makita.jpg" width="123" height="40" alt="Makita">
         </a>
         <a href="#" class="manufacturers__link">
-          <img class="manufacturers__img" src="img/DeWALT.jpg" width="146" height="44" alt="DeWALT">
+          <img class="manufacturers__img" src="img/dewalt.jpg" width="146" height="44" alt="DeWALT">
         </a>
         <a href="#" class="manufacturers__link">
-          <img class="manufacturers__img" src="img/Interstol.jpg" width="200" height="88" alt="Интерскол">
+          <img class="manufacturers__img" src="img/interstol.jpg" width="200" height="88" alt="Интерскол">
         </a>
         <a href="#" class="manufacturers__link">
-          <img class="manufacturers__img" src="img/Hitachi.jpg" width="169" height="31" alt="Hitachi">
+          <img class="manufacturers__img" src="img/hitachi.jpg" width="169" height="31" alt="Hitachi">
         </a>
         <a href="#" class="manufacturers__link">
-          <img class="manufacturers__img" src="img/LG.jpg" width="121" height="73" alt="LG">
+          <img class="manufacturers__img" src="img/lg.jpg" width="121" height="73" alt="LG">
         </a>
         <a href="#" class="manufacturers__link">
-          <img class="manufacturers__img" src="img/AEG.jpg" width="151" height="96" alt="AEG">
+          <img class="manufacturers__img" src="img/aeg.jpg" width="151" height="96" alt="AEG">
         </a>
         <a href="#" class="manufacturers__link">
-          <img class="manufacturers__img" src="img/Metabo.jpg" width="204" height="69" alt="Metabo">
+          <img class="manufacturers__img" src="img/metabo.jpg" width="204" height="69" alt="Metabo">
         </a>
       </div>
     </section>
@@ -218,22 +218,16 @@
           <div class="services__block">
             <section class="services__block-item services__block-delivery services__block_display">
               <h2 class="services__block-title">Доставка</h2>
-              <p class="services__block-subtitle">Мы с удовольствием доставим ваш товар прямо <br> к вашему подъезду
-                совершенно бесплатно! <br> Ведь мы неплохо заработаем,<br> поднимая его на ваш этаж!</p>
+              <p class="services__block-subtitle">Мы с удовольствием доставим ваш товар прямо <br> к вашему подъезду совершенно бесплатно!</p>
+              <p class="services__block-subtitle services__block-subtitle_m">Ведь мы неплохо заработаем, <br> поднимая его на ваш этаж!</p>
             </section>
             <section class="services__block-item services__block-guarantee">
               <h2 class="services__block-title">Гарантия</h2>
-              <p class="services__block-subtitle">Если купленный у нас товар поломается или заискрит, <br> а также в
-                случае
-                пожара, спровоцированного его возгаранием,<br> вы всегда можете быть уверены в нашей гарантии. Мы
-                обменяем <br>
-                сгоревший товар на новый. <br> Дом уж восстановите как-нибудь сами.</p>
+              <p class="services__block-subtitle">Если купленный у нас товар поломается или заискрит, <br> а также в случае пожара, спровоцированного его возгаранием, вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. <br> Дом уж восстановите как-нибудь сами.</p>
             </section>
             <section class="services__block-item services__block-credit">
               <h2 class="services__block-title">Кредит</h2>
-              <p class="services__block-subtitle">Залезть в долговую яму стало проще! <br> Кредитные консультанты
-                придут вам
-                на помощь.</p>
+              <p class="services__block-subtitle">Залезть в долговую яму стало проще! <br> Кредитные консультанты придут вам на помощь.</p>
               <a href="#" class="services__block-link">Отправить заявку</a>
             </section>
           </div>
@@ -244,13 +238,8 @@
       <h2 class="visually-hidden">О компании</h2>
       <div class="about__us">
         <h3 class="about__us-title">Компания «Техномарт»</h3>
-        <p class="about__us-subtitle">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и
-          <br>
-          строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-        <p class="about__us-transportation">Мы можем доставить ваш товар в самые отдаленные точки России! <br>
-          Техномарт
-          работает
-          со многими транспортными компаниями: </p>
+        <p class="about__us-subtitle">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+        <p class="about__us-transportation">Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями: </p>
         <ul class="company-transportation">
           <li class="company-transportation__item">Деловые линии</li>
           <li class="company-transportation__item">Автотрейдинг</li>
@@ -260,7 +249,7 @@
       </div>
       <div class="about__contacts">
         <h3 class="about__contacts-title">Контакты</h3>
-        <p class="about__contacts-pick-up">Вы можете забрать товар сами,<br>заехав в наш офис:</p>
+        <p class="about__contacts-pick-up">Вы можете забрать товар сами, заехав в наш офис:</p>
         <a href="https://yandex.ru/maps/2/saint-petersburg/?ll=30.324850%2C59.938803&source=constructorLink&um=constructor%3Afa64608eda52ee902dcb11177acc6af42556fdec6747dbd28cc65c0f084d6217&z=16" class="about__map-link" target="_blank"><img class="about__map" src="img/map-small.jpg" width="300" height="158" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8"></a>
         <a href="#write-us" class="about__contacts-write-us">Заблудились? Напишите нам!</a>
       </div>
@@ -297,7 +286,7 @@
       <div class="footer__top container">
         <div class="footer__top_left">
           <a class="footer__top-logo-link"><img src="img/logo-header.png" width="138" height="23" alt="Техномарт"></a>
-          <p class="footer__top-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> +7 (812) 555-05-55</p>
+          <p class="footer__top-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</p>
         </div>
         <div class="footer__top_right">
           <ul class="footer__top-navigation">
@@ -318,7 +307,7 @@
     </div>
     <div class="footer-wrapper-bottom">
       <div class="footer__bottom container">
-        <p class="footer__bottom-copyright">© 2010–2019 Компания «Техномарт» <br> Все права защищены</p>
+        <p class="footer__bottom-copyright">© 2010–2019 Компания «Техномарт» Все права защищены</p>
         <ul class="footer__bottom-social">
           <li class="footer__bottom-social-item"><a href="#" class="footer__bottom-social-link footer__bottom-social-vk"
               aria-label="Техномарт в ВКонтакте"></a></li>
@@ -327,8 +316,8 @@
           <li class="footer__bottom-social-item"><a href="#" class="footer__bottom-social-link footer__bottom-social-inst"
               aria-label="Техномарт в Instagram"></a></li>
         </ul>
-        <p class="footer__bottom-communication">Обратная связь: <br> <a href="#" class="footer__bottom-communication-link">mail@htmlacademy.ru</a></p>
-        <p class="footer__bottom-developed">Разработано: <br> <a href="https://htmlacademy.ru/intensive/htmlcss" class="footer__bottom-developed-link">htmlacademy.ru</a></p>
+        <p class="footer__bottom-communication">Обратная связь: <a href="#" class="footer__bottom-communication-link">mail@htmlacademy.ru</a></p>
+        <p class="footer__bottom-developed">Разработано — <a href="https://htmlacademy.ru/intensive/htmlcss" class="footer__bottom-developed-link">htmlacademy.ru</a></p>
       </div>
     </div>
   </footer>
